--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
     <script src="https://cdn.jsdelivr.net/npm/lax.js" ></script>
 </head>
 <body>
-    <div class="container">
+    <!-- <div class="container">
         <div class="item">
             
         </div>
-    </div>
+    </div> -->
     <div class="container">
-        <div class="item">
-
-        </div>
     </div>
     <script src="./main.js"></script>
 </body>
